--- a/lib/occi/bin/templates/compute.erb
+++ b/lib/occi/bin/templates/compute.erb
@@ -5,10 +5,10 @@ COMPUTE:
   STATE:    <%= json_resource.resources.first.attributes.occi.compute.state %>
   LINKS:
   <% if json_resource.links %><% json_resource.links.each do |link| %>
-    LINK "<%= link.attributes.occi.core.target.split("/")[1] %>":
+    LINK "<%= link.kind %>":
       ID:          <%= link.attributes.occi.core.id %>
       TITLE:       <%= link.attributes.occi.core.title %>
-      TARGET:      <%= link.attributes.occi.core.target %>
+      TARGET:      <%= link.target %>
       <% if link.attributes.occi.networkinterface %>
       IP ADDRESS:  <%= link.attributes.occi.networkinterface.address %>
       MAC ADDRESS: <%= link.attributes.occi.networkinterface.mac %>
