--- a/lib/occi/cli/templates/network.erb
+++ b/lib/occi/cli/templates/network.erb
@@ -1,9 +1,11 @@
-<%# We always get a JSON %>
+<%- # We always get a JSON -%>
+<%- attributes = json_resource.resources.first.attributes -%>
+<%- if attributes.occi -%>
 NETWORK:
-  ID:           <%= json_resource.resources.first.attributes.occi.core.id %>
-  TITLE:        <%= json_resource.resources.first.attributes.occi.core.title %>
-  STATE:        <%= json_resource.resources.first.attributes.occi.network.state %>
-  ALLOCATION:   <%= json_resource.resources.first.attributes.occi.network.allocation %>
-  ADDRESS:      <%= json_resource.resources.first.attributes.occi.network.address %>
-
+  ID:           <%= attributes.occi.core.id %>
+  TITLE:        <%= attributes.occi.core.title || attributes.occi.network.label %>
+  STATE:        <%= attributes.occi.network.state %>
+  ALLOCATION:   <%= attributes.occi.network.allocation || (attributes.occi.networkinterface && attributes.occi.networkinterface.allocation) %>
+  ADDRESS:      <%= attributes.occi.network.address || (attributes.occi.networkinterface && attributes.occi.networkinterface.address) %>
+<%- end -%>
 
