--- a/lib/occi/cli/templates/resource_tpl.erb
+++ b/lib/occi/cli/templates/resource_tpl.erb
@@ -1,7 +1,6 @@
-<%# We always get a JSON %>
+<%- # We always get a JSON -%>
 RESOURCE_TPL:
   TITLE:        <%= json_resource.title %>
   TERM:         <%= json_resource.term %>
   LOCATION:     <%= json_resource.location %>
-
 
