--- a/lib/occi/cli/templates/mixins.erb
+++ b/lib/occi/cli/templates/mixins.erb
@@ -1,8 +1,9 @@
 <%- # We always get Occi::Core::Mixins -%>
-<% occi_resources.each do |mixin| %>
+<%- occi_resources.each do |mixin| -%>
 [<%= mixin.type_identifier %>]
 	Title:        <%= mixin.title %>
 	Term:         <%= mixin.term %>
 	Location:     <%= mixin.location %>
 
-<% end %>
+
+<%- end -%>
