--- a/lib/occi/cli/templates/resources.erb
+++ b/lib/occi/cli/templates/resources.erb
@@ -23,8 +23,8 @@ Mixins:
     <%- end -%>
 
 Actions:
-    <%- resource.links.to_a.select { |l| l.rel && l.rel.to_s.match(/^\S+\/action#\S+$/) }.each do |action| %>
-    [[ <%= action.rel.to_s %> ]]
+    <%- resource.actions.each do |action| %>
+    [[ <%= action.type_identifier %> ]]
     <%- end -%>
 <%= '#' * (HighLine::SystemExtensions.terminal_size.first - 1) -%>
 
