--- a/lib/occi/cli/templates/resources.erb
+++ b/lib/occi/cli/templates/resources.erb
@@ -2,6 +2,7 @@
 <%- unless occi_resources.blank? -%><%= '#' * (HighLine::SystemExtensions.terminal_size.first - 1) %><%- end %>
 <%- occi_resources.each do |resource| -%>
 [[ <%= resource.kind.type_identifier %> ]]
+>> location: <%= resource.location %>
     <%- resource.attributes.names.each_pair do |attribute, value| -%>
 <%= attribute %> = <%= value %>
     <%- end -%>
@@ -9,6 +10,7 @@
 Links:
     <%- resource.links.to_a.reject { |l| l.rel && l.rel.to_s.match(/^\S+\/action#\S+$/) }.each do |link| %>
     [[ <%= link.kind.type_identifier %> ]]
+    >> location: <%= link.location %>
         <%- link.attributes.names.each_pair do |attribute, value| -%>
     <%= attribute %> = <%= value %>
         <%- end -%>
